docs/apim/4.11/prepare-a-production-environment/sensitive-data-management/api-secrets/quick-start.md
---
description: Configure access to a secret manager and reference a secret from an API Management 4.11 API. Follow the quick start steps.
metaLinks:
  alternates:
    - quick-start.md
---

# Quick Start

{% hint style="info" %}
This quick start uses configuration examples for HashiCorp Vault and Gravitee APIM Gateway. For other secret managers, use cases, and a complete reference, see [configuration.md](configuration.md "mention").
{% endhint %}

## Prerequisites

* A Gravitee APIM instance in a development environment, self-hosted deployment, or a self-hosted Hybrid Gateway
* Credentials for your desired running Secret Manager

{% hint style="warning" %}
This feature is only compatible with V4 APIs.
{% endhint %}

## Configure access to a secret manager and reference the secret

To configure access to the secret manager and reference the secret, complete the following steps:

* [#configure-gravitee-to-access-a-secret-manager](quick-start.md#configure-gravitee-to-access-a-secret-manager "mention")
* [#restart-and-test](quick-start.md#restart-and-test "mention")
* [#create-an-api](quick-start.md#create-an-api "mention")
* [#test-the-api](quick-start.md#test-the-api "mention")
* [#create-a-secret-in-hashicorp-vault](quick-start.md#create-a-secret-in-hashicorp-vault "mention")
* [#reference-secrets-in-an-api](quick-start.md#reference-secrets-in-an-api "mention")
* [#test-and-export](quick-start.md#test-and-export "mention")

### Configure Gravitee to access a secret manager

Once your instance of HashiCorp Vault is configured, you can then apply the configuration using the  `gravitee.yml` file, the Helm chart, or environment variables.

#### Option 1: Configure access to the secret manager with a gravitee.yml file.

* Add the following configuration to your `gravitee.yml` file.

```yaml
api:
  secrets:
    providers:
      - plugin: vault
        configuration: 
          enabled: true
          host: 127.0.0.1      
          port: 8200
          ssl:
            enabled: false
          auth:
            method: token 
            config:
              token: root
```

For more information about configuring access to your secret manager, see [configuration.md](configuration.md "mention").

#### Option 2: Configure access to a secret manager with a Helm chart

* Add the following configuration to your Helm chart:

```yaml
gateway:
  api:
    secrets:
      providers:
        - plugin: vault
          configuration: 
            enabled: true   
            ## other properties as listed above
```

For more information about configuring access to your secret manager, see [configuration.md](configuration.md "mention").

#### Option 3: Configure access to a secret manager with environment variables

* In your `docker-compose.yml` file, add the following configuration:

```bash
GRAVITEE_API_SECRETS_PROVIDERS_0_PLUGIN_VAULT="true"
GRAVITEE_API_SECRETS_PROVIDERS_0_CONFIGURATION_ENABLED="true"
GRAVITEE_API_SECRETS_PROVIDERS_0_CONFIGURATION_HOST="127.0.0.1"
GRAVITEE_API_SECRETS_PROVIDERS_0_CONFIGURATION_PORT="8200"
GRAVITEE_API_SECRETS_PROVIDERS_0_CONFIGURATION_SSL_ENABLED="true"
GRAVITEE_API_SECRETS_PROVIDERS_0_CONFIGURATION_AUTH_METHOD="token"
GRAVITEE_API_SECRETS_PROVIDERS_0_CONFIGURATION_AUTH_CONFIG_TOKEN="root"
```

For more information about configuring access to your secret manager, see [configuration.md](configuration.md "mention").

### Restart and test

1. Restart your Gateway.
2. Check the logs and ensure there are no errors when loading the Secret Manager.

### Create an API

Create an API with a fake/exposed secret, which you will later secure (after we make sure everything works as expected).

1.  From the **Dashboard**, click **APIs**.

    <figure><img src="../../../.gitbook/assets/0A0FB129-4ED1-4145-BCFF-41395B132328.jpeg" alt="The console dashboard with APIs highlighted in the left navigation, showing no APIs and one application."><figcaption></figcaption></figure>
2.  Click **+ Add API**.

    <figure><img src="../../../.gitbook/assets/F7B8591E-F959-4162-9E2C-F44370805678.jpeg" alt="The APIs list with the Add API button highlighted above a single API row."><figcaption></figcaption></figure>
3.  In the **Choose API creation method** screen, click **Create V4 API**.

    <figure><img src="../../../.gitbook/assets/07BE9B4D-3AAD-4317-94D9-E820FD40B5AD.jpeg" alt="The Choose API creation method page, with the Create V4 API button highlighted in the Create New API panel."><figcaption></figcaption></figure>
4. In the **API name** field, type a name for the API. For example, test-api.
5. In the **Version number** field, type a version. For example, 1.1.
6.  Click **Validate my details**.

    <figure><img src="../../../.gitbook/assets/api-secrets-quick-start-3-1-1.png" alt="The organization CORS settings, with a locked wildcard allow-origin, six allowed methods, a list of allowed headers, exposed headers, and a max age in seconds."><figcaption></figcaption></figure>
7.  Select **HTTP Proxy**, and then click **Select my entrypoints**.

    <figure><img src="../../../.gitbook/assets/api-secrets-quick-start-8.png" alt="Step 2 of the API creation wizard, with HTTP Proxy selected over TCP Proxy as the API entrypoint."><figcaption></figcaption></figure>
8. In the **context-path** field, type a context path. For example, `/test/secrets/echo` .
9.  Click **Validate my entrypoints**.

    <figure><img src="../../../.gitbook/assets/api-secrets-quick-start-9.png" alt="Step 2 of the API creation wizard at the configure stage, with virtual hosts enabled and a context path entered and highlighted."><figcaption></figcaption></figure>
10. In the **Configure your API endpoints access**, complete the following sub-steps:
    1.  In the **Target url** field, set the target URL to `https://api.gravitee.io/echo` .

        <figure><img src="../../../.gitbook/assets/api-secrets-quick-start-10-1.png" alt="Step 3 of the API creation wizard, with a target URL entered that fails the required pattern, showing a validation error below the field."><figcaption></figcaption></figure>
    2.  In HTTP Headers section, add the following values:

        * KEY: `Authorization`
        * VALUE: `ApiKey 123456789`

        <figure><img src="../../../.gitbook/assets/api-secrets-quick-start-18-1.png" alt="The Close plan confirmation dialog, warning that the operation is irreversible and requiring the plan name to be typed to confirm."><figcaption></figcaption></figure>
11. Click **Validate my endpoints**.

    <figure><img src="../../../.gitbook/assets/api-secrets-quick-start-12-2.png" alt="The lower part of an HTTP proxy endpoint&#x27;s configuration, showing proxy options set to no proxy and SSL options with host verification on, trust all off, and no truststore or key store."><figcaption></figcaption></figure>
12. Click V**alidate my plans**.

    <figure><img src="../../../.gitbook/assets/api-secrets-quick-start-19-1.png" alt="The Deploy your API dialog open over the Plans tab, asking for a label to identify the deployment."><figcaption></figcaption></figure>
13. Click **Save & Deploy API**.

    <figure><img src="../../../.gitbook/assets/api-secrets-quick-start-14.png" alt="Step 5 of the API creation wizard, summarising the API details, entrypoints, endpoints, and keyless plan, with Save API and Save and Deploy API buttons."><figcaption></figcaption></figure>

### Test the API

* Call the endpoint. Here is an example call with curl:

```bash
curl http://{your_gateway_url}:8082/test/secrets/echo
```

You should receive the following output:

<pre class="language-shellscript"><code class="lang-shellscript">HTTP/1.1 200 OK
Content-Length: 311
Content-Type: application/json
Sozu-Id: 01K4PV89Y5A0X3X3CK9R902JX5
X-Gravitee-Client-Identifier: 54dca846a6d89edad8abf5a0f6158acef71d53242ea232831da778d3abc345c4
X-Gravitee-Request-Id: beb5e861-dfc1-456d-b5e8-61dfc1756d70
X-Gravitee-Transaction-Id: beb5e861-dfc1-456d-b5e8-61dfc1756d70

{
    "bodySize": 0,
    "headers": {
        "Accept": "*/*",
        <a data-footnote-ref href="#user-content-fn-1">"Authorization": "ApiKey 123456789",</a>
        "Host": "api.gravitee.io",
        "User-Agent": "HTTPie/3.2.4",
        "X-Gravitee-Request-Id": "8fdad3ae-7c91-4ef4-9ad3-ae7c91eef4ca",
        "X-Gravitee-Transaction-Id": "beb5e861-dfc1-456d-b5e8-61dfc1756d70",
        "accept-encoding": "deflate, gzip"
    },
    "query_params": {}
}
</code></pre>

In the export of your API, you will see the `Authorization` header - and exposed secret/value - as part of the API definition:

```json
...
"endpointGroups": [
  {
    "name": "Default HTTP proxy group",
    "type": "http-proxy",
    "loadBalancer": {
      "type": "ROUND_ROBIN"
    },
    "sharedConfiguration": {
      "headers":[
        {
          "name": "Authorization",
          "value": "ApiKey {#secrets.get('/vault/secret/gravitee/apikeys:username')}"
        }
      ]
  ...
```

### Create a secret in HashiCorp Vault

*   Create a secret with name `gravitee/apikeys` using `secret` with one entry: `echo` containing the value `123456789` .

    ```bash
    vault kv put -mount=secret gravitee/apikeys echo=123456789
    ```

### Reference secrets in an API

1.  In your API configuration screen, click **Endpoints**.

    <figure><img src="../../../.gitbook/assets/E6F61D2D-CFC9-446E-820F-649F4FEF3F97.jpeg" alt="The Configuration page of an API with Endpoints highlighted in the API menu, showing the general settings above a Danger Zone."><figcaption></figcaption></figure>
2.  Click **Edit**.

    <figure><img src="../../../.gitbook/assets/5DF13AD2-0BEC-4D40-9D2E-33BFED89E109.jpeg" alt="The Endpoints page with the Edit button on the default HTTP proxy group highlighted, above a table listing one endpoint."><figcaption></figcaption></figure>
3.  Click the **Configuration** tab, and then navigate to **HTTP Headers**.

    <figure><img src="../../../.gitbook/assets/api-secrets-quick-start-15.png" alt="The configuration of an HTTP proxy endpoint, showing idle timeout, redirect following, connection pool size, a default Authorization header, proxy options, and SSL options."><figcaption></figcaption></figure>
4. In the **VALUE** field, replace `ApiKey 123465798` with `ApiKey{#secrets.get('/vault/secret/gravitee/apikeys:username')}` .
5.  In the **You have unsaved changes** pop-up window, click **Save.**

    <figure><img src="../../../.gitbook/assets/92605F29-EFFF-4614-9AE6-105EF1375C69.jpeg" alt="The endpoint configuration scrolled to HTTP Headers, with an Authorization header whose value is read from a secrets expression, above the proxy and SSL options."><figcaption></figcaption></figure>
6.  In the **This API is out of sync** pop-up window, click **Deploy API**.

    <figure><img src="../../../.gitbook/assets/5E632C04-EC1A-4755-97E0-95F2B1495868.jpeg" alt="The Endpoints page under an out-of-sync banner, with the Deploy API button highlighted and the endpoint security configuration below."><figcaption></figcaption></figure>

### Test and export

1. Check the logs for errors.
2.  Call the endpoint. Here is an example call with curl:

    ```bash
    curl http://{your_gateway_url}:8082/test/secrets/echo
    ```

The response should be the same as before, but the secret has been obtained from the Secret Manager.

**Export your API** (using the same process as before).

You should now only see the secret reference (instead of the clear text ApiKey value):

```json
...
"endpointGroups": [
  {
    "name": "Default HTTP proxy group",
    "type": "http-proxy",
    "loadBalancer": {
      "type": "ROUND_ROBIN"
    },
    "sharedConfiguration": {
      "headers":[
        {
          "name": "Authorization",
          "value": "ApiKey {#secrets.get('/vault/secret/gravitee/apikeys:username')}"
        }
      ]
  ...
```

## Next steps

* For more information about configurations for other secret managers and all available options, see [configuration.md](configuration.md "mention").
* For more information about the the `{#secrets.get(...)}` syntax, see [reference-secrets-in-apis.md](reference-secrets-in-apis.md "mention")

[^1]: This is the header that was set up above
